<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:background="@drawable/boder_dialog"
    android:padding="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/_4sdp">


        <ImageView
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_clear_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sorry"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/you_cannot_clear_data_because_it_contains_your_logs_you_can_clear_cache_to_free_it_up"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tvAllow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/border_orange"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>
</RelativeLayout>