<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/_10sdp">

    <RelativeLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/menu_3"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@+id/switchCompat"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/turn_on_notifications_to_remind_you_every_day"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:thumb="@drawable/ic_thumb_switch"
            app:track="@drawable/custom_switch_track" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/set_your_time"
            android:textColor="@color/gray_2"
            android:textSize="@dimen/_11ssp" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:headerBackground="@color/orange"
            android:numbersSelectorColor="@color/black"
            android:numbersTextColor="@color/gray_2"
            android:timePickerMode="spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llSwitch"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/set_your_title"
            android:textColor="@color/gray_2"
            android:textSize="@dimen/_11ssp" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/border_background_edittext_dialog"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/write_a_diary_for_today"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_2" />
    </LinearLayout>
</RelativeLayout>