<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:background="@drawable/boder_dialog"
    android:padding="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/_4sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/title_dialog_check_permission"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <ImageView
                android:id="@+id/ivExitPer"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_exit" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/check_one"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/check_two"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_mic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/check_three"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvAllow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/border_orange"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/allow_permission"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>
</RelativeLayout>